fixed burger menu layout issues

--- a/news-tracker/src/styles/header/header.scss
+++ b/news-tracker/src/styles/header/header.scss
@@ -8,7 +8,7 @@
   position: fixed;
   top: 0;
 
-  width: 100%;
+  width: 100vw;
   background-color: rgba(33, 39, 45, 0.90);
   backdrop-filter: blur(3px);
   z-index: 10000;
